--- a/style.scss
+++ b/style.scss
@@ -321,12 +321,16 @@ header{
     flex-direction: column;
     gap:16px;
 
+    .bla{
+      color: black;
+    }
     #ca1{
       background: linear-gradient(99.56deg, #FAFF00 35.82%, #29ABE2 64.75%, rgba(255, 255, 255, 0.7) 91.33%);}
     .card{
       padding: 6px 16px;
       background: linear-gradient(98.73deg, #611D8D 35.75%, #2F7EC1 73.26%);
       border-radius: 30px;
+      color: white;
     .icon{
       align-items: center;
       svg{
